# harmony

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
harmony/: main.py  streaming_client.py
harmony/apple_music/: apple_music_cli.py  apple_music_client.py  musickit_auth.html
harmony/spotify/: spotify_cli.py  spotify_client.py
harmony/tools/: cli_tools.py  logger.py  playlist_syncer.py  streaming_client.py
src/: main.py  streaming_client.py
src/spotify/: spotify_client.py
tests/: test_apple_music_client.py  test_playlist_syncer.py  test_spotify_client.py  test_streaming_client.py
