   [build-system]
   requires = ["setuptools>=61.0"]
   build-backend = "setuptools.build_meta"

   [project]
   name = "harmony"
   version = "0.1.0"
   description = "A CLI app to interact with Spotify and Apple Music"
   authors = [
       { name = "Allan", email = "chandyallan@gmail.com" }
   ]
   readme = "README.md"
   license = { text = "MIT" }
   dependencies = []
   classifiers = [
       "Programming Language :: Python :: 3",
       "License :: OSI Approved :: MIT License",
       "Operating System :: OS Independent"
   ]

   [tool.setuptools.packages.find]
   where = ["harmony"]